# AmbedkarGPT-Intern-Task

./: .gitignore  README.md  evaluation.py  main.py  pyproject.toml  rag_runnables.py  requirements.txt  results_analysis.md
corpus/: speech1.txt  speech3.txt  speech4.txt  speech5.txt  speech6.txt
data/: aggregated_results.json  speech2.txt  test_dataset.json  test_results.json
lib/: config.py  rag_chain.py  search.py  search_utils.py
lib/evaluation/: eval.py  evaluation.py
lib/metrics/: answer_quality_metrics.py  retrieval_metrics.py  semantic_metrics.py
lib/search/: search.py  search_utils.py
lib/utils/: constants.py  helper_functions.py
retrieval/: rag_chain.py  retrieval_logic.py  search.py  search_utils.py
retrieval/chroma_vector_db/: chroma.sqlite3
