[project]
name = "ambedkargpt-intern-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "sentence-transformers>=5.1.2",
]
